Fix iOS Flicker Scrolling

--- a/source/scss/_lists.scss
+++ b/source/scss/_lists.scss
@@ -173,6 +173,7 @@
     -ms-user-select: none;
     -moz-user-select: none;
     -webkit-user-drag: none;
+    -webkit-tap-highlight-color: rgba(#000, 0.05); // :active for ios safari
 
     .icon {
       margin-right: $indent-width * (2/3);
