--- a/source/scss/_task.scss
+++ b/source/scss/_task.scss
@@ -35,9 +35,12 @@ $speed: 250ms;
       padding: $indent-width / 2 0 $indent-width / 2 0;
       flex: 1;
       outline: 0;
+      border-radius: 0;
 
       &:disabled {
         color: inherit;
+        opacity: 1;
+        -webkit-text-fill-color: #000;
       }
 
       &:hover:not(:disabled) {
